[tool.poetry]
name = "spellsync"
version = "0.1.0"
description = "Synchronise personal spelling dictionaries across applications"
authors = ["Patrice Neff <mail@patrice.ch>"]

[tool.poetry.scripts]
spellsync = "spellsync.main:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
xdg = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
