[tool.poetry]
name = "spellsync"
version = "0.2.0"
description = "Synchronise personal spelling dictionaries across applications"
authors = ["Patrice Neff <mail@patrice.ch>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pneff/SpellSync"
repository = "https://github.com/pneff/SpellSync"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Topic :: Text Editors",
    "Topic :: Utilities",
]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
spellsync = "spellsync.main:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
xdg = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
